tests/purs/failing/OrphanRoleDeclaration2.purs
-- @shouldFailWith OrphanRoleDeclaration
module Main where

type role D nominal
data D a = D a
